--- a/src/Question.css
+++ b/src/Question.css
@@ -1,4 +1,4 @@
-.btn{
+/* .btn{
     background-color: gray;
     padding: 5px 25px;
     border: none;
@@ -6,4 +6,25 @@
     border-radius: 5px;
     margin-top: 5px;
     color: white;
+} */
+.gradient-button {
+    margin: 10px;
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 5px;
+    padding: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 100% auto;
+    color: #FFF;
+    box-shadow: 0 0 15px #eee;
+    border-radius: 10px;
+    width: 200px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    cursor: pointer;
+    display: inline-block;
+    border-radius: 25px;
 }
+.gradient-button-3 {background-image: linear-gradient(to right, #7474BF 0%, #348AC7 51%, #7474BF 100%)}
+.gradient-button-3:hover { background-position: right center; }
