--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 .App {
-  font-family: sans-serif;
+  /* font-family: sans-serif;
+   */
+   font-family: "Arial Black", Gadget, sans-serif;
   text-align: center;
+  font-size: 20px;
+    padding: 15px;
 }
