--- a/src/Question.css
+++ b/src/Question.css
@@ -30,18 +30,26 @@
     border-radius: 25px;
     
 }
+/* .currentQuestion::before{
+color: blue !important;
+} */
 #myDIV{
     /* background-color: rgba(162, 199, 126, 0.527); */
     /* color: black!important; */
-    color: black;
+    /* color: black;
+    transition-duration: .2s;
+    transition-delay: 1s; */
+}
+#questioncolor{
+    /* color: black; */
     transition-duration: .2s;
     transition-delay: 1s;
 }
-
 #myDIV::before {
     content: "Your Quiz is: ";
     /* background-color: rgba(242, 196, 248, 0.527); */
     font-weight: bold;
+    color: green;
   }
 .gradient-button:hover{
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
