--- a/src/Question.css
+++ b/src/Question.css
@@ -10,11 +10,15 @@
 #or{
     color: black;
 }
+img{
+    width: 250px;
+    height: 150px;
+}
 .gradient-button {
     /* margin: 10px; */
     /* font-family: "Arial Black", Gadget, sans-serif; */
     /* font-size: 5px; */
-    /* padding: 10px; */
+    padding: 10px;
     /* text-align: center; */
     /* text-transform: uppercase; */
     /* transition: 0.5s; */
@@ -25,7 +29,7 @@
     /* width: 200px; */
     /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
     /* transition: all 0.3s cubic-bezier(.25,.8,.25,1); */
-    /* cursor: pointer; */
+    cursor: pointer;
     /* display: inline-block; */
     /* border-radius: 25px; */
     
